# ScreenShotPP

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/release-notes/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.2.0-rc.2.md  v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.3.0.md  v0.3.1-rc.1.md  v0.3.1-rc.2.md  v0.3.1.md  v0.4.0-rc.1.md  v0.4.0-rc.2.md  v0.4.0.md  v0.5.0-rc.1.md  v0.5.0-rc.2.md  v0.5.0-rc.3.md  v0.5.0.md  v0.5.1.md
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/demo/: .gitignore  README.md  capture.mjs  demo.html  generate.sh  renderer.js  verify.mjs
docs/distribution/: github-release.md
docs/superpowers/plans/: 2026-05-30-palier1-capture-de-base.md  2026-05-30-palier2a-editeur-fondation.md  2026-05-30-palier2b-crayon-texte.md  2026-05-30-palier2c-bulles-numerotees.md  2026-05-30-palier3a-ocr.md  2026-05-30-taille-sortie.md  2026-05-31-palier3b-mosaique.md  2026-05-31-palier4a-reglages.md  2026-05-31-palier4b-ocr-windows.md  2026-05-31-palier4c-optimisations.md  2026-05-31-palier4d1-github-release.md  2026-05-31-readme-demo-exhaustive.md  2026-06-01-palier5-editor-enhancements.md
docs/superpowers/specs/: 2026-05-30-palier2a-editeur-fondation-design.md  2026-05-30-palier2b-crayon-texte-design.md  2026-05-30-palier2c-bulles-numerotees-design.md  2026-05-30-palier3a-ocr-design.md  2026-05-30-screenshotpp-design.md  2026-05-30-taille-sortie-design.md  2026-05-31-palier3b-mosaique-design.md  2026-05-31-palier4a-reglages-design.md  2026-05-31-palier4b-ocr-windows-design.md  2026-05-31-palier4c-optimisations-design.md  2026-05-31-palier4d1-github-release-design.md  2026-05-31-readme-demo-exhaustive-design.md  2026-06-01-palier5-editor-enhancements-design.md  2026-07-17-selection-resize-handles-design.md
scripts/: check-release-readiness.sh  fetch-ffmpeg.sh  optimize-demo-gif.sh  updater-notes.mjs
src/: accelerator.js  accelerator.test.js  color-picker.js  countdown.html  countdown.js  editable-target.js  editable-target.test.js  index.html  main.css  main.js  overlay.css  overlay.html  overlay.js  update.js  update.test.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: countdown.json  default.json  recorder.json  recording-hud.json
src-tauri/core/: Cargo.toml
src-tauri/core/src/: countdown.rs  geometry.rs  layout.rs  lib.rs  record.rs  settings.rs
src-tauri/src/: capture.rs  capture_win.rs  clipboard.rs  commands.rs  countdown.rs  hotkey.rs  lib.rs  main.rs  ocr.rs  record.rs  settings.rs  storage.rs  tray.rs  window_pick.rs
src-tauri/swift-lib/: Package.swift
src-tauri/swift-lib/Sources/swift-lib/: lib.swift
src/editor/: bubbles.js  bubbles.test.js  color.js  color.test.js  editor.js  editor.test.js  fit.js  fit.test.js  history.js  history.test.js  mosaic.js  mosaic.test.js
src/recorder/: crop.js  crop.test.js  hud-border.html  hud-border.js  hud-controls.html  hud-controls.js  recorder.css  recorder.html  recorder.js  trim.js  trim.test.js
