[workspace]
members = [".", "core"]

[package]
name = "screenshotpp"
version = "0.3.1"
description = "ScreenShotPP – background screenshot utility"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Optimise les dépendances (image, xcap, …) même en build dev : le traitement
# pixel par pixel (capture, encodage) y est sinon 10-30× plus lent qu'en release,
# ce qui dominait la latence de capture. N'affecte pas la vitesse de recompilation
# de notre propre crate (opt-level 0 conservé pour le code applicatif).
[profile.dev.package."*"]
opt-level = 3

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "screenshotpp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
swift-rs = { version = "1.0.7", features = ["build"] }

[dependencies]
screenshotpp-core = { path = "core" }
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
chrono = "0.4"
xcap = "0.9"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-autostart = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-opener = "2"
base64 = "0.22.1"
swift-rs = "1.0.7"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Media_Ocr",
    "Graphics_Imaging",
    "Storage_Streams",
    "Globalization",
    "Foundation",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }
# Capture d'écran via Windows Graphics Capture (WGC). Remplace le chemin GDI
# BitBlt de xcap, qui rend du noir pour le contenu composé GPU (partage Teams)
# et est peu fiable sur écrans secondaires / DPI mixtes.
windows-capture = "2"
